# kobuki

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_PLAN.md  CLAUDE_FUTURE_HW_FEATURES.md  NOTES.md  PROJECT_CONTEXT.md  bringup.Dockerfile  compose-2-nodes.yaml  compose-kobuki.yaml  compose.yaml  cyclonedds.xml  lidar.Dockerfile  orchestrator.Dockerfile  slam.Dockerfile  zenoh_config.json5  zenoh_config_no_shm.json5  zenoh_router_config.json5
.github/: copilot-instructions.md
augs_bringup/: CMakeLists.txt  package.xml
augs_bringup/launch/: augs_kobuki_node.launch.py
docker/: LocalDockerfile  workspace_entrypoint.sh
docs/: lessons-learned.md
docs/superpowers/plans/: 2026-03-14-orchestrator-logging.md  2026-03-15-nav2-debug-and-integration.md
kobuki/launch/: augs_kobuki_node.launch.py  kobuki.launch.py  slam.launch.py  view_kobuki_launch.py
kobuki/urdf/: kobuki_no_base_joint.urdf.xacro
launch_agent_interfaces/: CMakeLists.txt  package.xml
launch_agent_interfaces/srv/: LaunchStart.srv  LaunchStatus.srv
maps/: README.md
orchestrator/: API_REFERENCE.md  my_map_name.annotations.json  robot_orchestrator.py
scripts/: test_status_api.sh
slam/: CMakeLists.txt  README.md  package.xml
slam/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml  ps4.config.yaml
slam/launch/: joy_teleop.launch.py  lidar_bringup.launch.py  slam_localization.launch.py  slam_mapping.launch.py  sllidar_with_transform.launch.py
slam/scripts/: launch_agent_node.py  map_selector.py  save_map_helper.py  slam_controller.py
(+1 files in other folders)
